# ECOM047_2017.2

./: README.md
atividades/02_Criando_um_driver/: Makefile  types.h
atividades/03_Blockchain/: .gitignore  ICBlock.c  ICBlock.h  Makefile  README.md
atividades/04_Oximetro/: README.md
atividades/05_ATCommand/: .gitignore  README.md
atividades/05_ATCommand/src/: ICLEDMatrix.c  ICLEDMatrix.h  ICStatus.h
atividades/Criando_um_driver/: .gitignore  accelerometer.c  accelerometer.h  types.h
codigosAula/CommandPattern/: CMakeLists.txt  prj.conf
codigosAula/CommandPattern/include/: ic_assert.h  uart_driver.h
codigosAula/CommandPattern/src/: main.c  uart_driver.c
codigosAula/State/: main.c  main_plusplus.c
projeto/display/: CMakeLists.txt
projeto/display/src/: main.c
projeto/i2c_examples/: prj.conf
projeto/i2c_examples/src/: i2c_util.c  main.c
